UniversalFoxAssembler/ANTLR/UFox16ASMParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from UFox16ASM.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class UFox16ASMParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, JMP=8, JZ=9, JNZ=10, 
		JL=11, JLE=12, JG=13, JGE=14, ADD=15, SUB=16, MUL=17, DIV=18, INC=19, 
		DEC=20, SHL=21, SHR=22, AND=23, OR=24, XOR=25, NOT=26, NOP=27, HLT=28, 
		ID=29, HEX=30, DEC_NUM=31, BIN=32, COMMENT=33, WHITESPACE=34;
	public const int
		RULE_assembly = 0, RULE_line = 1, RULE_label = 2, RULE_instruction = 3, 
		RULE_directive = 4, RULE_comment = 5, RULE_jump = 6, RULE_cmp = 7, RULE_mov = 8, 
		RULE_arithmetic = 9, RULE_bitshift = 10, RULE_logic = 11, RULE_basic = 12, 
		RULE_operand = 13, RULE_constant = 14;
	public static readonly string[] ruleNames = {
		"assembly", "line", "label", "instruction", "directive", "comment", "jump", 
		"cmp", "mov", "arithmetic", "bitshift", "logic", "basic", "operand", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "'#define'", "'CMP'", "','", "'MOV'", "'['", "']'", "'JMP'", 
		"'JZ'", "'JNZ'", "'JL'", "'JLE'", "'JG'", "'JGE'", "'ADD'", "'SUB'", "'MUL'", 
		"'DIV'", "'INC'", "'DEC'", "'SHL'", "'SHR'", "'AND'", "'OR'", "'XOR'", 
		"'NOT'", "'NOP'", "'HLT'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "JMP", "JZ", "JNZ", "JL", 
		"JLE", "JG", "JGE", "ADD", "SUB", "MUL", "DIV", "INC", "DEC", "SHL", "SHR", 
		"AND", "OR", "XOR", "NOT", "NOP", "HLT", "ID", "HEX", "DEC_NUM", "BIN", 
		"COMMENT", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "UFox16ASM.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static UFox16ASMParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public UFox16ASMParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public UFox16ASMParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class AssemblyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(UFox16ASMParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext[] label() {
			return GetRuleContexts<LabelContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label(int i) {
			return GetRuleContext<LabelContext>(i);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assembly; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterAssembly(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitAssembly(this);
		}
	}

	[RuleVersion(0)]
	public AssemblyContext assembly() {
		AssemblyContext _localctx = new AssemblyContext(Context, State);
		EnterRule(_localctx, 0, RULE_assembly);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073741612L) != 0)) {
				{
				State = 32;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__1:
				case T__2:
				case T__4:
				case JMP:
				case JZ:
				case JNZ:
				case JL:
				case JLE:
				case JG:
				case JGE:
				case ADD:
				case SUB:
				case MUL:
				case DIV:
				case INC:
				case DEC:
				case SHL:
				case SHR:
				case AND:
				case OR:
				case XOR:
				case NOT:
				case NOP:
				case HLT:
					{
					State = 30;
					line();
					}
					break;
				case ID:
					{
					State = 31;
					label();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 36;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 37;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
			case T__4:
			case JMP:
			case JZ:
			case JNZ:
			case JL:
			case JLE:
			case JG:
			case JGE:
			case ADD:
			case SUB:
			case MUL:
			case DIV:
			case INC:
			case DEC:
			case SHL:
			case SHR:
			case AND:
			case OR:
			case XOR:
			case NOT:
			case NOP:
			case HLT:
				{
				State = 39;
				instruction();
				}
				break;
			case T__1:
				{
				State = 40;
				directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(UFox16ASMParser.ID, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 4, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			Match(ID);
			State = 44;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public JumpContext jump() {
			return GetRuleContext<JumpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CmpContext cmp() {
			return GetRuleContext<CmpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MovContext mov() {
			return GetRuleContext<MovContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArithmeticContext arithmetic() {
			return GetRuleContext<ArithmeticContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BitshiftContext bitshift() {
			return GetRuleContext<BitshiftContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LogicContext logic() {
			return GetRuleContext<LogicContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BasicContext basic() {
			return GetRuleContext<BasicContext>(0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitInstruction(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 6, RULE_instruction);
		try {
			State = 53;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case JMP:
			case JZ:
			case JNZ:
			case JL:
			case JLE:
			case JG:
			case JGE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 46;
				jump();
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 47;
				cmp();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 3);
				{
				State = 48;
				mov();
				}
				break;
			case ADD:
			case SUB:
			case MUL:
			case DIV:
			case INC:
			case DEC:
				EnterOuterAlt(_localctx, 4);
				{
				State = 49;
				arithmetic();
				}
				break;
			case SHL:
			case SHR:
				EnterOuterAlt(_localctx, 5);
				{
				State = 50;
				bitshift();
				}
				break;
			case AND:
			case OR:
			case XOR:
			case NOT:
				EnterOuterAlt(_localctx, 6);
				{
				State = 51;
				logic();
				}
				break;
			case NOP:
			case HLT:
				EnterOuterAlt(_localctx, 7);
				{
				State = 52;
				basic();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(UFox16ASMParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX() { return GetToken(UFox16ASMParser.HEX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEC_NUM() { return GetToken(UFox16ASMParser.DEC_NUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BIN() { return GetToken(UFox16ASMParser.BIN, 0); }
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_directive);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(T__1);
			State = 56;
			Match(ID);
			State = 57;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7516192768L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(UFox16ASMParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitComment(this);
		}
	}

	[RuleVersion(0)]
	public CommentContext comment() {
		CommentContext _localctx = new CommentContext(Context, State);
		EnterRule(_localctx, 10, RULE_comment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JumpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(UFox16ASMParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JMP() { return GetToken(UFox16ASMParser.JMP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JZ() { return GetToken(UFox16ASMParser.JZ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JNZ() { return GetToken(UFox16ASMParser.JNZ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JL() { return GetToken(UFox16ASMParser.JL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JLE() { return GetToken(UFox16ASMParser.JLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JG() { return GetToken(UFox16ASMParser.JG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode JGE() { return GetToken(UFox16ASMParser.JGE, 0); }
		public JumpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_jump; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterJump(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitJump(this);
		}
	}

	[RuleVersion(0)]
	public JumpContext jump() {
		JumpContext _localctx = new JumpContext(Context, State);
		EnterRule(_localctx, 12, RULE_jump);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 32512L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 62;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public CmpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterCmp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitCmp(this);
		}
	}

	[RuleVersion(0)]
	public CmpContext cmp() {
		CmpContext _localctx = new CmpContext(Context, State);
		EnterRule(_localctx, 14, RULE_cmp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(T__2);
			State = 65;
			operand();
			State = 66;
			Match(T__3);
			State = 67;
			operand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MovContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public MovContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mov; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterMov(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitMov(this);
		}
	}

	[RuleVersion(0)]
	public MovContext mov() {
		MovContext _localctx = new MovContext(Context, State);
		EnterRule(_localctx, 16, RULE_mov);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(T__4);
			State = 70;
			operand();
			State = 71;
			Match(T__3);
			State = 72;
			operand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArithmeticContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(UFox16ASMParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(UFox16ASMParser.SUB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUL() { return GetToken(UFox16ASMParser.MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(UFox16ASMParser.DIV, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INC() { return GetToken(UFox16ASMParser.INC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEC() { return GetToken(UFox16ASMParser.DEC, 0); }
		public ArithmeticContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arithmetic; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterArithmetic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitArithmetic(this);
		}
	}

	[RuleVersion(0)]
	public ArithmeticContext arithmetic() {
		ArithmeticContext _localctx = new ArithmeticContext(Context, State);
		EnterRule(_localctx, 18, RULE_arithmetic);
		int _la;
		try {
			State = 83;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ADD:
			case SUB:
			case MUL:
			case DIV:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 491520L) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 75;
				operand();
				State = 76;
				Match(T__3);
				State = 79;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 77;
					operand();
					}
					break;
				case 2:
					{
					State = 78;
					constant();
					}
					break;
				}
				}
				break;
			case INC:
			case DEC:
				EnterOuterAlt(_localctx, 2);
				{
				State = 81;
				_la = TokenStream.LA(1);
				if ( !(_la==INC || _la==DEC) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 82;
				operand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitshiftContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHL() { return GetToken(UFox16ASMParser.SHL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHR() { return GetToken(UFox16ASMParser.SHR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public BitshiftContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitshift; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterBitshift(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitBitshift(this);
		}
	}

	[RuleVersion(0)]
	public BitshiftContext bitshift() {
		BitshiftContext _localctx = new BitshiftContext(Context, State);
		EnterRule(_localctx, 20, RULE_bitshift);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			_la = TokenStream.LA(1);
			if ( !(_la==SHL || _la==SHR) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 86;
			operand();
			State = 87;
			Match(T__3);
			State = 90;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 88;
				operand();
				}
				break;
			case 2:
				{
				State = 89;
				constant();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(UFox16ASMParser.AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR() { return GetToken(UFox16ASMParser.OR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode XOR() { return GetToken(UFox16ASMParser.XOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT() { return GetToken(UFox16ASMParser.NOT, 0); }
		public LogicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logic; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.EnterLogic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IUFox16ASMListener typedListener = listener as IUFox16ASMListener;
			if (typedListener != null) typedListener.ExitLogic(this);
		}
	}
